--- a/005 - Ejercicio Integrador/Lab_05_Ejercicio_Integrador.ipynb
+++ b/005 - Ejercicio Integrador/Lab_05_Ejercicio_Integrador.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "kvqR9ZYvJrc0"
       },
@@ -64,7 +64,7 @@
       "metadata": {
         "id": "B-76Kp-3J6yh"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
         "id": "aGkJsrWyJ9I_",
         "outputId": "4dedc5d0-425e-4033-9325-41fe9dcfa385"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
       "metadata": {
         "id": "NQoIF_ey-mh9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
         "id": "bCQtX1WRP8ZZ",
         "outputId": "8e17d7a3-6105-49e9-99e4-ae1ef9519386"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -182,7 +182,7 @@
         "id": "-jenpmMiKAK8",
         "outputId": "db5572f3-20da-44df-9fa6-870a73aa2789"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -223,7 +223,7 @@
         "id": "mUudZDa7Su2Z",
         "outputId": "572b3ce4-e418-4086-fc02-c8a2945e8707"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -264,7 +264,7 @@
         "id": "f5RrYGGcSulS",
         "outputId": "70c86b9a-fbc3-4820-9ada-9958bf8b8178"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -321,7 +321,7 @@
         "id": "SgsaKKrxKHQF",
         "outputId": "fe2c86f6-a591-437a-f345-af11e6e3950c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -354,7 +354,7 @@
       "metadata": {
         "id": "XwkFjnBK86Vr"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -375,7 +375,7 @@
         "id": "63GIF2vy86Si",
         "outputId": "fbf7b0ba-086e-47a5-adc7-1214afed8605"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -431,7 +431,7 @@
       "metadata": {
         "id": "6y2xngen8Wx6"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -446,7 +446,7 @@
       "metadata": {
         "id": "kurph1kd9ZFL"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -463,7 +463,7 @@
       "metadata": {
         "id": "c9m9Iu4cBUaT"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -478,7 +478,7 @@
       "metadata": {
         "id": "_nGDVrfvCe0x"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -495,7 +495,7 @@
       "metadata": {
         "id": "MOuDqXbcEbze"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -510,7 +510,7 @@
       "metadata": {
         "id": "uCZyPtGyEpJZ"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -560,7 +560,7 @@
         "id": "BVr2r4-w9fs8",
         "outputId": "462ed9ec-4f99-450e-e405-dd06bc94beeb"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -608,13 +608,13 @@
       "source": [
         "#Aplicamos un factor de cuantización \"qa\" para asignarlos a la imagen \"Za\" y observar los cambios\n",
         "qa = 32                 # Factor de cuantización\n",
-        "Za = np.floor(X/qa)*qa     # Divide por q, redondea hacia abajo y multiplica por q\n",
+        "Za = np.floor(X/qa)*qa     # Divide por qa, redondea hacia abajo y multiplica por qa\n",
         "Za = Za.astype(np.uint8)   # Convierte a enteros 0-255"
       ],
       "metadata": {
         "id": "Nc_Uok5I9zwY"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -628,7 +628,7 @@
       "metadata": {
         "id": "jZqRNQmp0I-p"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -642,7 +642,7 @@
       "metadata": {
         "id": "XuXWiYYl2h7S"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -656,7 +656,7 @@
       "metadata": {
         "id": "pKzqNzFvZuPC"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -697,7 +697,7 @@
         "id": "_tFLxhN15Gqr",
         "outputId": "46d2131b-5efc-4589-926a-8a689500ffe7"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -745,7 +745,7 @@
       "metadata": {
         "id": "GLTOES0C--wQ"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -794,7 +794,7 @@
         "id": "O-mo6qa5-rlx",
         "outputId": "048a17cb-006d-4d65-a882-b54175d21fb0"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -849,7 +849,7 @@
         "id": "r6zZQpORKO8h",
         "outputId": "d18cc1e1-9ac4-43c1-82f1-a8de00a2138e"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -890,21 +890,21 @@
         "fig, axes = plt.subplots(2, 2, figsize=(10,10))\n",
         "fig.suptitle('Histogramas Frecuencia pixeles', fontsize=16)\n",
         "\n",
-        "# Imagen Cuantizada A - Factor 32\n",
+        "# Imagen escala grises\n",
         "axes[0,0].plot(hist(gris))\n",
         "axes[0,0].set_title('Hist. niveles de gris')\n",
         "\n",
         "\n",
-        "# Imagen Cuantizada B - Factor 64\n",
+        "# Imagen canal rojo\n",
         "axes[0,1].plot(hist(rojo))\n",
         "axes[0,1].set_title('Hist. niveles de rojo')\n",
         "\n",
         "\n",
-        "# Imagen Cuantizada C - Factor 128\n",
+        "# Imagen canal verde\n",
         "axes[1,0].plot(hist(verde))\n",
         "axes[1,0].set_title('Hist. niveles de verde')\n",
         "\n",
-        "# Imagen Cuantizada D - Factor 256\n",
+        "# Imagen canal azul\n",
         "axes[1,1].plot(hist(azul))\n",
         "axes[1,1].set_title('Hist. niveles de azul')\n",
         "\n",
@@ -919,7 +919,7 @@
         "id": "f2KQEBQbw5bc",
         "outputId": "a8c09c5c-80f6-46d3-faab-55585b708ffe"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -960,7 +960,7 @@
         "id": "ltlrkyMwKUf0",
         "outputId": "c36345fc-169b-44f4-fb50-1c35f1462b77"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -992,7 +992,7 @@
         "id": "lEbP7c7eTBxc",
         "outputId": "07fcd88c-75f9-497c-8988-1c1fe3c41d39"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1027,7 +1027,7 @@
         "id": "MdBpP9sYKpim",
         "outputId": "0e02c2db-64ee-464a-c37f-601c4df5a110"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1070,7 +1070,7 @@
       "metadata": {
         "id": "hTEADt6IKsCY"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1101,7 +1101,7 @@
         "id": "O46cx96yKwfn",
         "outputId": "053d69ca-6be7-4b29-97ef-d956934a249b"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
