--- a/008 - Reconocimiento Facial/008 - Reconocimiento Facial con MediaPipe.ipynb
+++ b/008 - Reconocimiento Facial/008 - Reconocimiento Facial con MediaPipe.ipynb
@@ -34,47 +34,7 @@
         "import mediapipe as mp\n",
         "import numpy as np\n",
         "from google.colab import files\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "# Funcion para subir imagen\n",
-        "def upload_image():\n",
-        "  uploaded = files.upload()\n",
-        "  for fn in uploaded.keys():\n",
-        "    print('User uploaded file \"{name}\" with length {length} bytes'.format(\n",
-        "        name=fn, length=len(uploaded[fn])))\n",
-        "    return fn\n",
-        "\n",
-        "# Upload an image file\n",
-        "image_filename = upload_image()\n",
-        "\n",
-        "# Read the uploaded image\n",
-        "image = cv2.imread(image_filename)\n",
-        "\n",
-        "# Convert the image to RGB (MediaPipe uses RGB)\n",
-        "image_rgb = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
-        "\n",
-        "# Initialize MediaPipe Face Mesh\n",
-        "mp_face_mesh = mp.solutions.face_mesh\n",
-        "face_mesh = mp_face_mesh.FaceMesh(static_image_mode=True, max_num_faces=1)\n",
-        "\n",
-        "# Process the image and detect faces\n",
-        "results = face_mesh.process(image_rgb)\n",
-        "\n",
-        "# Draw face landmarks on the image\n",
-        "if results.multi_face_landmarks:\n",
-        "  for face_landmarks in results.multi_face_landmarks:\n",
-        "    mp.solutions.drawing_utils.draw_landmarks(\n",
-        "        image=image,\n",
-        "        landmark_list=face_landmarks,\n",
-        "        connections=mp_face_mesh.FACEMESH_TESSELATION,\n",
-        "        landmark_drawing_spec=None,\n",
-        "        connection_drawing_spec=mp.solutions.drawing_utils.DrawingSpec(color=(0, 255, 0), thickness=1, circle_radius=1))\n",
-        "\n",
-        "# Display the image with landmarks\n",
-        "plt.figure(figsize=(10, 10))\n",
-        "plt.imshow(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
-        "plt.axis('off')\n",
-        "plt.show()\n"
+        "import matplotlib.pyplot as plt\n"
       ],
       "metadata": {
         "id": "mSt2pBH9UA0t"
@@ -84,15 +44,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "source": [
+        "\n",
+        "# Funcion para subir imagen\n",
+        "def upload_image():\n",
+        "  uploaded = files.upload()\n",
+        "  for fn in uploaded.keys():\n",
+        "    print('Se subió el archivo \"{name}\" con un tamaño de {length} bytes'.format(\n",
+        "        name=fn, length=len(uploaded[fn])))\n",
+        "    return fn\n",
+        "\n",
+        "# Subida de Imagen\n",
+        "nombre_archivo = upload_image()\n",
+        "\n",
+        "# Lectura con cv2\n",
+        "imagen = cv2.imread(nombre_archivo)\n",
+        "\n",
+        "# Conversion de imagen a RGB\n",
+        "imagen_rgb = cv2.cvtColor(imagen, cv2.COLOR_BGR2RGB)\n",
+        "\n",
+        "# Inicializacion de MediaPipe\n",
+        "mp_face_mesh = mp.solutions.face_mesh\n",
+        "face_mesh = mp_face_mesh.FaceMesh(static_image_mode=True, max_num_faces=1)\n",
+        "\n",
+        "# Procesamiento de imagen y deteccion de rostros\n",
+        "resultado = face_mesh.process(imagen_rgb)\n",
+        "\n",
+        "# Dibujo de landmark faciales en la imagen\n",
+        "if resultado.multi_face_landmarks:\n",
+        "  for face_landmarks in resultado.multi_face_landmarks:\n",
+        "    mp.solutions.drawing_utils.draw_landmarks(\n",
+        "        image=imagen,\n",
+        "        landmark_list=face_landmarks,\n",
+        "        connections=mp_face_mesh.FACEMESH_TESSELATION,\n",
+        "        landmark_drawing_spec=None,\n",
+        "        connection_drawing_spec=mp.solutions.drawing_utils.DrawingSpec(color=(0, 255, 0), thickness=1, circle_radius=1))\n",
+        "\n",
+        "# Ploteo de imagen con malla facial identificados\n",
+        "plt.figure(figsize=(10, 10))\n",
+        "plt.imshow(cv2.cvtColor(imagen, cv2.COLOR_BGR2RGB))\n",
+        "plt.axis('off')\n",
+        "plt.show()"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 577
         },
-        "id": "u-aT1G__QUEu",
-        "outputId": "a5b59fb5-887b-4886-f4f5-e990fd7b20c4"
+        "id": "cYK-02tobE89",
+        "outputId": "202f996b-c99b-4958-8c3f-ddd8863342a3"
       },
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -102,9 +104,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-542e288c-9582-4414-a6ad-688c59f33fd3\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-51fa1ff1-d702-4fc3-9526-b1e681282ad0\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-542e288c-9582-4414-a6ad-688c59f33fd3\">\n",
+              "     <output id=\"result-51fa1ff1-d702-4fc3-9526-b1e681282ad0\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -292,8 +294,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving rostro_harry.jpg to rostro_harry (1).jpg\n",
-            "Se subió el archivo \"rostro_harry (1).jpg\" con un tamaño de 118460 bytes\n"
+            "Saving rostro_harry.jpg to rostro_harry (2).jpg\n",
+            "Se subió el archivo \"rostro_harry (2).jpg\" con un tamaño de 118460 bytes\n"
           ]
         },
         {
@@ -306,56 +308,6 @@
           },
           "metadata": {}
         }
-      ],
-      "source": [
-        "# prompt: Generar proceso simple para identificar landmarks faciales utilizando mediapipe (solicitando la carga de la imagen) y luego mostrar la imagen con la malla facial identificada\n",
-        "\n",
-        "\n",
-        "import cv2\n",
-        "import mediapipe as mp\n",
-        "import numpy as np\n",
-        "from google.colab import files\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "# Function to upload an image file\n",
-        "def upload_image():\n",
-        "  uploaded = files.upload()\n",
-        "  for fn in uploaded.keys():\n",
-        "    print('Se subió el archivo \"{name}\" con un tamaño de {length} bytes'.format(\n",
-        "        name=fn, length=len(uploaded[fn])))\n",
-        "    return fn\n",
-        "\n",
-        "# Subida de Imagen\n",
-        "nombre_archivo = upload_image()\n",
-        "\n",
-        "# Lectura con cv2\n",
-        "imagen = cv2.imread(nombre_archivo)\n",
-        "\n",
-        "# Conversion de imagen a RGB\n",
-        "imagen_rgb = cv2.cvtColor(imagen, cv2.COLOR_BGR2RGB)\n",
-        "\n",
-        "# Inicializacion de MediaPipe\n",
-        "mp_face_mesh = mp.solutions.face_mesh\n",
-        "face_mesh = mp_face_mesh.FaceMesh(static_image_mode=True, max_num_faces=1)\n",
-        "\n",
-        "# Procesamiento de imagen y deteccion de rostros\n",
-        "resultado = face_mesh.process(imagen_rgb)\n",
-        "\n",
-        "# Dibujo de landmark faciales en la imagen\n",
-        "if resultado.multi_face_landmarks:\n",
-        "  for face_landmarks in results.multi_face_landmarks:\n",
-        "    mp.solutions.drawing_utils.draw_landmarks(\n",
-        "        image=image,\n",
-        "        landmark_list=face_landmarks,\n",
-        "        connections=mp_face_mesh.FACEMESH_TESSELATION,\n",
-        "        landmark_drawing_spec=None,\n",
-        "        connection_drawing_spec=mp.solutions.drawing_utils.DrawingSpec(color=(0, 255, 0), thickness=1, circle_radius=1))\n",
-        "\n",
-        "# Ploteo de imagen con malla facial identificados\n",
-        "plt.figure(figsize=(10, 10))\n",
-        "plt.imshow(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
-        "plt.axis('off')\n",
-        "plt.show()\n"
       ]
     }
   ]
